HOMEWORK №2 Tests created, updated: Administration mode, notifications section