@@ -5,12 +5,10 @@ import com.ylab.entity.Goal;
 import com.ylab.entity.User;
 
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-/**
- * Сервис для управления уведомлениями о достижении лимитов и целей.
- */
 public class NotificationService {
     private final BudgetService budgetService;
     private final GoalService goalService;
@@ -24,20 +22,17 @@ public class NotificationService {
         this.transactionService = transactionService;
     }
 
-    /**
-     * Проверяет все бюджеты пользователя и отправляет уведомления о превышении.
-     *
-     * @param user пользователь
-     * @return список уведомлений (для API)
-     */
     public List<String> checkBudgetsAndNotify(User user, User admin) {
-        List<String> notifications = null;
+        List<String> notifications = new ArrayList<>();
         try {
             List<Budget> budgets = budgetService.getUserBudgets(user, admin);
+            if (budgets.isEmpty()) {
+                return notifications;
+            }
+
             notifications = budgets.stream()
                     .map(budget -> {
-                        String notification = null;
-                        notification = budgetService.checkBudget(budget.getId(), user, admin);
+                        String notification = budgetService.checkBudget(budget.getId(), user, admin);
                         if (notification != null) {
                             sendEmailNotification(user, "Превышение бюджета", notification);
                             return notification;
@@ -45,33 +40,40 @@ public class NotificationService {
                         return null;
                     })
                     .filter(n -> n != null)
-                    .toList();
+                    .collect(Collectors.toList());
+
+            if (notifications.isEmpty()) {
+                String allFineMessage = "Все бюджеты в пределах лимитов";
+                notifications.add(allFineMessage);
+            }
         } catch (SQLException e) {
             System.err.println("Ошибка базы данных: " + e.getMessage());
+            notifications.add("Ошибка при проверке бюджета: " + e.getMessage());
         }
         return notifications;
     }
 
-    /**
-     * Проверяет все цели пользователя и отправляет уведомления о прогрессе.
-     *
-     * @param user пользователь
-     * @return список уведомлений (для API)
-     */
+    public void sendImmediateNotification(User user, String subject, String message) {
+        sendEmailNotification(user, subject, message);
+        System.out.println("Уведомление: " + message);
+    }
+
     public List<String> checkGoalsAndNotify(User user, User admin) {
         try {
             List<Goal> goals = goalService.getUserGoals(user);
+            if (goals.isEmpty()) {
+                return new ArrayList<>();
+            }
             return goals.stream()
                     .map(goal -> {
-                        String progress = null;
-                        progress = goalService.trackGoalProgress(goal.getId(), user, admin);
+                        String progress = goalService.trackGoalProgress(goal.getId(), user, admin);
                         if (progress.contains("Цель достигнута")) {
                             String message = "Поздравляем! " + progress;
                             sendEmailNotification(user, "Достижение цели", message);
                             return message;
                         } else if (progress.contains("Осталось накопить")) {
                             double remaining = Double.parseDouble(progress.split("Осталось накопить: ")[1].split("\n")[0]);
-                            if (remaining < goal.getTargetAmount() * 0.1) { // Осталось менее 10%
+                            if (remaining < goal.getTargetAmount() * 0.1) {
                                 String message = "Вы близки к цели!\n" + progress;
                                 sendEmailNotification(user, "Прогресс по цели", message);
                                 return message;
@@ -87,27 +89,15 @@ public class NotificationService {
         }
     }
 
-    /**
-     * Проверяет бюджет с учетом транзакций и возвращает уведомление.
-     * Оставлен как публичный метод для гибкости, но делегирует логику в BudgetService.
-     *
-     * @param user пользователь
-     * @param admin администратор
-     * @return уведомление или null
-     */
     public String checkBudgetTransaction(User user, User admin) throws SQLException {
-        int budgetId = budgetService.findById(user.getId()).getId();
-        return budgetService.checkBudget(budgetId, user, admin);
+        Budget budget = budgetService.findById(user.getId());
+        if (budget != null) {
+            return budgetService.checkBudget(budget.getId(), user, admin);
+        }
+        return null;
     }
 
-    /**
-     * Отправляет email-уведомление пользователю.
-     *
-     * @param user    пользователь
-     * @param subject тема письма
-     * @param message текст уведомления
-     */
     private void sendEmailNotification(User user, String subject, String message) {
-        emailSender.sendEmail(user.getEmail(), subject, message);
+        emailSender.sendEmail(user.getEmail(),subject, message);
     }
 }
